--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
         android:orientation="vertical">
 
         <Button
+            android:id="@+id/but0"
             android:layout_width="76dp"
             android:layout_height="wrap_content"
             android:layout_row="0"
@@ -33,6 +34,7 @@
             android:text="0" />
 
         <Button
+            android:id="@+id/but1"
             android:layout_width="76dp"
             android:layout_height="wrap_content"
             android:layout_row="0"
@@ -40,6 +42,7 @@
             android:text="1" />
 
         <Button
+            android:id="@+id/but2"
             android:layout_width="76dp"
             android:layout_height="wrap_content"
             android:layout_row="0"
@@ -47,6 +50,7 @@
             android:text="2" />
 
         <Button
+            android:id="@+id/but3"
             android:layout_width="76dp"
             android:layout_height="wrap_content"
             android:layout_row="0"
@@ -54,6 +58,7 @@
             android:text="3" />
 
         <Button
+            android:id="@+id/but4"
             android:layout_width="76dp"
             android:layout_height="wrap_content"
             android:layout_row="0"
@@ -62,6 +67,7 @@
 
 
         <Button
+            android:id="@+id/but5"
             android:layout_width="76dp"
             android:layout_height="wrap_content"
             android:layout_row="1"
@@ -69,6 +75,7 @@
             android:text="5" />
 
         <Button
+            android:id="@+id/but6"
             android:layout_width="76dp"
             android:layout_height="wrap_content"
             android:layout_row="1"
@@ -76,6 +83,7 @@
             android:text="6" />
 
         <Button
+            android:id="@+id/but7"
             android:layout_width="76dp"
             android:layout_height="wrap_content"
             android:layout_row="1"
@@ -83,6 +91,7 @@
             android:text="7" />
 
         <Button
+            android:id="@+id/but8"
             android:layout_width="76dp"
             android:layout_height="wrap_content"
             android:layout_row="1"
@@ -90,6 +99,7 @@
             android:text="8" />
 
         <Button
+            android:id="@+id/but9"
             android:layout_width="76dp"
             android:layout_height="wrap_content"
             android:layout_row="1"
@@ -97,5 +107,26 @@
             android:text="9" />
 
     </GridLayout>
+
+    <Button
+        android:id="@+id/but_plus"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="+"/>
+    <Button
+        android:id="@+id/but_minus"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="-"/>
+    <Button
+        android:id="@+id/but_but_multiply"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="*"/>
+    <Button
+        android:id="@+id/but_division"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="/"/>
 
 </LinearLayout>
