--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -119,7 +119,7 @@
         android:layout_height="wrap_content"
         android:text="-"/>
     <Button
-        android:id="@+id/but_but_multiply"
+        android:id="@+id/but_multiply"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="*"/>
@@ -128,5 +128,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="/"/>
+
+    <TextView
+        android:id="@+id/result"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="계산결과 : "/>
 
 </LinearLayout>
